--- a/VirtualGlasses/VirtualGlasses/index.html
+++ b/VirtualGlasses/VirtualGlasses/index.html
@@ -29,6 +29,7 @@
                 </div>
             </div>
             <div class="col-5 vglasses__right p-0">
+        
                 <div class="vglasses__card">
                     <div class="mb-2 text-right mt-2 mr-2">
                         <button class="btn btn-warning" onclick="removeGlasses(false)">Before</button>
@@ -59,7 +60,7 @@
         crossorigin="anonymous"></script>
 
     <!-- MAIN JS -->
-    <script type="module" src="./js/main.js"></script>
+    <script  src="./js/main.js"></script>
 
 </body>
 
