--- a/VirtualGlasses/VirtualGlasses/index.html
+++ b/VirtualGlasses/VirtualGlasses/index.html
@@ -36,7 +36,7 @@
                         <button class="btn btn-warning" onclick="removeGlasses(true)">After</button>
                     </div>
                     <div class="vglasses__model" id="avatar">
-                        <div id="virtual">
+                        <div id="virtual" style="display: flex; align-items: center;justify-content: center; height: 65%;">
                         </div>
                     </div>
                     <div id="glassesInfo" class="vglasses__info">
