fix button onclick, transition chưa fix thành công

--- a/VirtualGlasses/VirtualGlasses/index.html
+++ b/VirtualGlasses/VirtualGlasses/index.html
@@ -29,14 +29,15 @@
                 </div>
             </div>
             <div class="col-5 vglasses__right p-0">
-        
+
                 <div class="vglasses__card">
                     <div class="mb-2 text-right mt-2 mr-2">
                         <button class="btn btn-warning" onclick="removeGlasses(false)">Before</button>
                         <button class="btn btn-warning" onclick="removeGlasses(true)">After</button>
                     </div>
                     <div class="vglasses__model" id="avatar">
-                        <div id="virtual" style="display: flex; align-items: center;justify-content: center; height: 65%;">
+                        <div id="virtual"
+                            style="display: flex; align-items: center;justify-content: center; height: 65%;">
                         </div>
                     </div>
                     <div id="glassesInfo" class="vglasses__info">
@@ -60,7 +61,7 @@
         crossorigin="anonymous"></script>
 
     <!-- MAIN JS -->
-    <script  src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
 
 </body>
 
